salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/OSFMX_Subscription__c.object-meta.xml
<CustomObject>
    <description>Represents the registry for users subscribed to the report</description>
    <label>Suscripción a Reporte</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suscripción a Reportes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>