salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/fields/OSFMX_ReporteURLPDF__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReporteURLPDF__c</fullName>
    <formula>OSFMX_ReportWeekly__r.OSFMX_URL_PDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReporteURLPDF</label>
    <type>Text</type>
</CustomField>