salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/fields/OSFMX_ReportWeekly__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReportWeekly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporte Semanal</label>
    <referenceTo>OSFMX_URL__c</referenceTo>
    <relationshipLabel>Suscripción a Reportes</relationshipLabel>
    <relationshipName>Suscripciones</relationshipName>
    <type>Lookup</type>
</CustomField>