salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/fields/OSFMX_StopFollowing__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StopFollowing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seguir</label>
    <type>Checkbox</type>
</CustomField>