salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/fields/OSFMX_Subscription__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Subscription__c</fullName>
    <description>Indicador de Suscripción al reporte</description>
    <label>Suscribirme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>