salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/fields/OSFMX_SubscriptionEmail__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SubscriptionEmail__c</fullName>
    <description>Correo del Suscriptor</description>
    <label>Correo Electrónico</label>
    <required>true</required>
    <type>Email</type>
</CustomField>