salesforce_sfdx/main/default/objects/OSFMX_Subscription__c/listViews/OSFMX_MySuscriptions.listView-meta.xml
<ListView>
    <fullName>OSFMX_MySuscriptions</fullName>
    <columns>OSFMX_SubscriptionEmail__c</columns>
    <columns>OSFMX_StopFollowing__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OSFMX_StopFollowing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mis suscripciones</label>
</ListView>